--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "STA 444/5 - Introductory Data Science using R"
 subtitle: "Version 2"
-author: "Robert Buscaglia"
+author: "Dr. Robert Buscaglia"
 date: "`r format(Sys.Date(), '%B %d, %Y')`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
