--- a/02_Intro_to_DataFrames.Rmd
+++ b/02_Intro_to_DataFrames.Rmd
@@ -28,7 +28,9 @@ suppressPackageStartupMessages({
 })
 ```
 
-You may find Dr. Sonderegger's video companion here [Video Lecture](https://youtu.be/4IzqPTuHycc).
+Dr. Sonderegger's Video Companion: [Video Lecture](https://youtu.be/4IzqPTuHycc).
+
+## Data Frames
 
 Data frames are the fundamental unit of data storage that casual users of R need to work with. Conceptually they are just like a single tab in a spreadsheet (e.g. Excel) file. There are multiple rows and columns and each column is of the same type of information (e.g. numerical values, dates, or character strings) and each row represents a single observation.
 
