--- a/01_Familiarization.Rmd
+++ b/01_Familiarization.Rmd
@@ -57,15 +57,17 @@ Whenever you create a new Rmarkdown document, it is populated with code and comm
 | Commentary  | These are the areas with a white background. You can write nearly anything here and in your final document it will be copied over. I typically use these spaces to write commentary and interpretation of my data analysis project.  |
 | Code Chunk  |  These are the grey areas. This is where your R code will go. When knitting the document, each code chunk will be run sequentially and the code in each chunk must run. |
 
-The R code in an RMD document is nicely separated from regular text using three back ticks and an instruction that it is R code that needs to be evaluated. A new R chunk can also be quickly inserted into an RMD document using the hotkey `Ctrl+Alt+I` on windows, and a green insert function is located at the top of the RMD document, or you can always manually type them in as well. The output of this document looks good as a HTML, PDF, or MS Word document. This entire book is created using RMarkdown. To see what the the RMD file looks like for any chapter, just click on the pencil icon at the top of the online notes. This is a great way to view the source code for anything programmed in this book, and is highly recommended for copy/pasting information from the book into your own work, such as the exercises at the end of each chapter.
+In an R Markdown (RMD) document, R code is clearly separated from the regular text using three backticks along with an instruction indicating that it’s R code to be evaluated. You can easily insert a new R code chunk using the shortcut `Ctrl+Alt+I` on Windows or `Cmd+Option+I` on Mac, or by clicking the green insert button at the top of the RMD editor. You can also manually type the chunk delimiters. There are many [chunk options](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf) available. The final output of an RMD document can be rendered in various formats, including HTML, PDF, or MS Word.
+
+This entire book is created using R Markdown. To view the RMD file for any chapter, simply click the `view source` icon at the top of the online notes. This allows you to see the source code, which is especially useful if you want to copy and paste code into your own work, such as the exercises provided at the end of each chapter.
 
 While writing an RMD file, each of the code chunks can be executed in a couple of different ways. 
 
 1. Press the green arrow at the top of the code chunk to run the entire chunk.
 2. The run button has several options for running different amounts of code.
-3. There are keyboard shortcuts, on Windows use Ctrl+Enter, on Mac use Cmd+Return.
+3. There are keyboard shortcuts, on Windows use `Ctrl+Enter`, on Mac use `Cmd+Return`.
 
-Finally, we want to produce a nice output document that combines the code, output, and commentary. To do this, you'll "knit" the document which causes all of the R code to be run in a new R session, and then weave together the output into your document. This can be done using the knit button at the top of the Editor Window. Be mindful that the RMD file is a stand-alone document that must have all components necessary for the file to run. Anything that was loaded into local memory will not be seen when compiling the RMD file. For instance, if you need a particular data set available for the code to run, this must be coded into the RMD file, and not just loaded into local memory. These types of issues will become more familiar as you work through the examples and exercises available in this textbook.
+Finally, we want to produce a nice output document that combines the code, output, and commentary. To do this, you'll **knit** the document which causes all of the R code to be run in a new R session, and then weave together the output into your document. This can be done using the knit button at the top of the Editor Window. Be mindful that the RMD file is a stand-alone document that must have all components necessary for the file to run. Anything that was loaded into local memory will not be seen when compiling the RMD file. For instance, if you need a particular data set available for the code to run, this must be coded into the RMD file, and not just loaded into local memory. These types of issues will become more familiar as you work through the examples and exercises available in this textbook.
 
 When I was a graduate student, I had to tediously copy and paste tables of output from the R console and figures I had made into my Microsoft Word document. Far too often I would realize I had made a small mistake in part (b) of a problem and would have to go back, correct my mistake, and then redo all the laborious copying. I often wished that I could write both the code for my statistical analysis and the long discussion about the interpretation all in the same document so that I could just re-run the analysis with a click of a button and all the tables and figures would be updated by magic. That is what RMD does.
 
