Fixed some broken links.

--- a/01_Familiarization.Rmd
+++ b/01_Familiarization.Rmd
@@ -57,7 +57,7 @@ Whenever you create a new Rmarkdown document, it is populated with code and comm
 | Commentary  | These are the areas with a white background. You can write nearly anything here and in your final document it will be copied over. I typically use these spaces to write commentary and interpretation of my data analysis project.  |
 | Code Chunk  |  These are the grey areas. This is where your R code will go. When knitting the document, each code chunk will be run sequentially and the code in each chunk must run. |
 
-In an R Markdown (RMD) document, R code is clearly separated from the regular text using three backticks along with an instruction indicating that it’s R code to be evaluated. You can easily insert a new R code chunk using the shortcut `Ctrl+Alt+I` on Windows or `Cmd+Option+I` on Mac, or by clicking the green insert button at the top of the RMD editor. You can also manually type the chunk delimiters. There are many [chunk options](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf) available. The final output of an RMD document can be rendered in various formats, including HTML, PDF, or MS Word.
+In an R Markdown (RMD) document, R code is clearly separated from the regular text using three backticks along with an instruction indicating that it’s R code to be evaluated. You can easily insert a new R code chunk using the shortcut `Ctrl+Alt+I` on Windows or `Cmd+Option+I` on Mac, or by clicking the green insert button at the top of the RMD editor. You can also manually type the chunk delimiters. There are many [chunk options](https://github.com/BuscagliaR/STA_444_v2/blob/main/images/rmarkdown-reference.pdf) available. The final output of an RMD document can be rendered in various formats, including HTML, PDF, or MS Word.
 
 This entire book is created using R Markdown. To view the RMD file for any chapter, simply click the `view source` icon at the top of the online notes. This allows you to see the source code, which is especially useful if you want to copy and paste code into your own work, such as the exercises provided at the end of each chapter.
 
